Push main project files, ignore test files

--- a/.gitignore
+++ b/.gitignore
@@ -246,3 +246,14 @@ $RECYCLE.BIN/
 # End of https://www.toptal.com/developers/gitignore/api/python,jupyternotebooks,windows,macos
 
 docs/docs_out
+
+teststreamlit.py
+ReactionT5/
+data/ord/
+data/ord_dataset.pb.gz
+data/orderly/
+effiency.py
+orderly_benchmark.zip
+orderly_benchmark/
+test_orderly.py
+
