added Ylann's lookup.py (GHS, flash point etc.) and integrated into streamlit app.py

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
     "pubchempy",
     "requests",
     "google-generativeai",
-
+    "jypiterlab"
 ]
 authors = [
     {name = "Jiho", email = "jiho.keum@epfl.ch"}
