--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ requires-python = ">=3.10,<3.12"
 license = { file = "LICENSE" }
 description = "Green‐chemistry reaction greenness calculator"
 
+
 dependencies = [
     "rdkit-pypi",
     "numpy",
@@ -17,7 +18,7 @@ dependencies = [
     "pubchempy",
     "requests",
     "google-generativeai",
-    "jypiterlab"
+    "jupyterlab"
 ]
 authors = [
     {name = "Jiho", email = "jiho.keum@epfl.ch"}
@@ -72,3 +73,4 @@ omit = [
 exclude_also = [
     "if __name__ == .__main__.:",
 ]
+
