--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ description = "Green‐chemistry reaction greenness calculator"
 
 dependencies = [
     "rdkit-pypi",
-    "numpy",
+    "numpy<2",
     "streamlit",
     "streamlit-ketcher",
     "pubchempy",
