--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,6 @@ description = "Green‐chemistry reaction greenness calculator"
 
 
 dependencies = [
-    "rdkit-pypi",
     "numpy<2",
     "streamlit",
     "streamlit-ketcher",
@@ -19,7 +18,8 @@ dependencies = [
     "requests",
     "google-generativeai",
     "jupyterlab",
-    "chempy"
+    "chempy",
+    "py3Dmol"
 ]
 authors = [
     {name = "Jiho", email = "jiho.keum@epfl.ch"}
