tested using pytest

--- a/tox.ini
+++ b/tox.ini
@@ -1,17 +1,8 @@
 [tox]
-env_list = py3{10,11,12}, docs, coverage
-
-[gh-actions]
-python =
-    3.10: py310, docs
-    3.11: py311
-    3.12: py312
+env_list = py311, docs, coverage
 
 [testenv]
-basepython =
-    {py310,docs,coverage}: python3.10
-    py311: python3.11
-    py312: python3.12
+basepython = python3.11
 setenv =
     PYTHONUNBUFFERED = yes
 passenv =
@@ -24,6 +15,7 @@ usedevelop = true
 
 [testenv:docs]
 description = build HTML docs
+usedevelop = true
 setenv =
     READTHEDOCS_PROJECT = mcga
     READTHEDOCS_VERSION = latest
@@ -33,6 +25,7 @@ commands =
     sphinx-build -d "{toxworkdir}/docs_doctree" docs/source "docs/docs_out"
 
 [testenv:coverage]
+basepython = python3.11
 commands =
     pytest --cov=src/mcga --cov-report xml:.tox/coverage.xml --cov-report term
     genbadge coverage -i .tox/coverage.xml -o assets/coverage-badge.svg
