--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "mcga"
+version = "0.1.0"
 readme = "README.md"
 requires-python = ">=3.10,<3.12"
 license = { file = "LICENSE" }
